[gd_scene load_steps=6 format=1]

[ext_resource path="res://Scripts/Breeding.gd" type="Script" id=1]
[ext_resource path="res://Resources/Sprites/barn.jpg" type="Texture" id=2]
[ext_resource path="res://Scenes/SelectBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/SelectBox.gd" type="Script" id=4]
[ext_resource path="res://Resources/Sprites/GUI/BreedClean.png" type="Texture" id=5]

[node name="Barn" type="Control"]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="BarnBackground" type="TextureFrame" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = -984.0
margin/bottom = -560.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="SelectBox1" type="Control" parent="." instance=ExtResource( 3 )]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 4 )

[node name="SelectBox2" type="Control" parent="." instance=ExtResource( 3 )]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 4 )

[node name="Breed" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 425.0
margin/top = 206.0
margin/right = 600.0
margin/bottom = 361.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 5 )
textures/hover = ExtResource( 5 )

[node name="Back" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 490.0
margin/top = 500.0
margin/right = 532.0
margin/bottom = 520.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]


